--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,8 @@
                     <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
-            <div class="product-card"> 
-<!--                 <div class="product-image"> -->
+            <div class="product-card">
+                <div class="product-image">
                     <span class="discount-tag">50% off</span>
                     <img src="img/card5.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
